@@ -1,3 +1,9 @@
+2007-02-19  David Trowbridge  <trowbrds@gmail.com>
+
+	* src/fe-gnome/find-bar.c:
+	  - Fix a broken class initialization, which was causing a crash during
+	    finalization at quit.  Bug #409458.
+
 2007-02-18  David Trowbridge  <trowbrds@gmail.com>
 
 	* src/common/xchat.c:
